positional_derive/tests/ui/struct-with-anonymous-fields.rs
use positional_derive::ToPositionalRow;

#[derive(ToPositionalRow)]
struct MyData(i32, String);

fn main() {}
